# pymikro

./: 50-ni-maschine.rules  README.md  maschine_mikro_mk3.json  pyproject.toml  setup.py
demo/: demo_lights.py  demo_main.py  demo_output_state.py  demo_pads.py  demo_pads_buttons.py  demo_screen.py
pymikro/: __init__.py
src/pymikro/: __init__.py  hid_device.py  maschine_mikro_mk3.json  maschine_mikro_mk3.py
src/pymikro/operations/: __init__.py  buttons.py  lights.py  pads.py  screen.py
